Add support for `LIMIT` parameter in `BucketQueryMessage`
Introduced `LIMIT` as an optional query parameter with validation in `BucketQueryMessage`. Updated parsing logic to handle dynamic parameter count. Adjusted related handlers to remove maximum parameter count restriction.